# pc-text-input-server

./: .gitignore  README.md  auto_start.bat  auto_start.sh  index.html  main.py  post_test.py  pyproject.toml  run.bat  run.py  run.sh  setup.py  setup.sh  test.py
input/: __init__.py  linux.py  macos.py  windows.py
