[project]
name = "pc-text-input-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "pillow>=12.2.0",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "qrcode>=8.2",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
